tdf#134479 allow disable font preview to work on existing font comboboxes

not just newly created one.

you can only restore back to a text-only view, not a text+(icon/whatever) view

Change-Id: Ic3becd7a942ee6b1dbabb57eebf1e25d1b626fdb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97972
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>