include/vcl/weld.hxx
@@ -735,7 +735,7 @@ public:
     }
     void connect_custom_render(const Link<render_args, void>& rLink) { m_aRenderHdl = rLink; }
     // call set_custom_renderer after setting custom callbacks
-    virtual void set_custom_renderer() = 0;
+    virtual void set_custom_renderer(bool bOn) = 0;
     // create a virtual device compatible with the device passed in render_args wrt alpha
     virtual VclPtr<VirtualDevice> create_render_virtual_device() const = 0;
     // set a sub menu for a entry, only works with custom rendering
